fix spacing

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -2346,13 +2346,12 @@ th, .th {
     }
     td, th, .td, .th {
       &:nth-child(1) {
-        width: 2.6%;
+        width: 2.3%;
         padding-right: 0;
         padding-left: 11px;
       }
       &:nth-child(2) {
-        width: 2%;
-        padding-left: 5px;
+        width: 2.3%;
       }
       &:nth-child(3) {
         width: 10.5%;
@@ -2481,7 +2480,7 @@ th, .th {
           width: 10.5%;
         }
         &:nth-child(4) {
-          width: 13.7%;
+          width: 13.5%;
           word-break: break-all;
         }
         &:nth-child(5) {
@@ -2491,7 +2490,7 @@ th, .th {
           width: 12.8%;
         }
         &:nth-child(7) {
-          width: 4.5%;
+          width: 4.7%;
         }
         &:nth-child(8) {
           width: 8.0%;
